Problemes en la definició Swagger de CallBack de PortaFIB #336 API Interna no funciona a governdigital.fundaciobit.org #334
